WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13028
REGRESSION: textField:doCommandBySelector:inFrame: not being called properly
https://bugs.webkit.org/show_bug.cgi?id=13028
Summary
REGRESSION: textField:doCommandBySelector:inFrame: not being called properly
Rachael Worthington (cheers)
Reported
2007-03-09 14:25:01 PST
-[WebFormDelegate textField:doCommandBySelector:inFrame:] doesn't appear to be called when the arrow keys or the tab key is pressed while focus is inside a text-field. this appears to be a regression from the behavior as of revision 19306 (at least), where the delegate method would be called.
Attachments
patch
(2.04 KB, patch)
2007-03-10 15:39 PST
,
Adele Peterson
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2007-03-10 15:39:46 PST
Created
attachment 13581
[details]
patch This is a regression from
r19579
, when we added TextInput events.
Maciej Stachowiak
Comment 2
2007-03-10 15:46:40 PST
Comment on
attachment 13581
[details]
patch r=me
Adele Peterson
Comment 3
2007-03-10 16:15:28 PST
Committed revision 20100.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug