        Reviewed by Maciej.

Fix for http://bugs.webkit.org/show_bug.cgi?id=13028
        REGRESSION: textField:doCommandBySelector:inFrame: not being called properly

        * html/HTMLInputElement.cpp: (WebCore::HTMLInputElement::defaultEventHandler):
          Before calling the base class defaultEventHandler, which will call handleKeypress, call doTextFieldCommandFromEvent.



Canonical link: https://commits.webkit.org/16906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20100 268f45cc-cd09-0410-ab3c-d52691b4dbfc